Fixes spurious space. Aligns menu with new pure-menu styles, revised for Pure 0.6.0.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -302,6 +302,7 @@ code {
     #menu .pure-menu ul {
         border: none;
         background: transparent;
+        display: block;
     }
 
     #menu .pure-menu ul,
